--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,13 @@
 <xml-maven-plugin.version>1.0.2</xml-maven-plugin.version>
 <xmlunit2.version>2.6.4</xmlunit2.version>
 </properties>
-<dependencies>
+<dependencies<dependency>
+    <groupId>spring-boot-starter-data-couchbase-reactive</groupId>
+    <artifactId>org.springframework.boot</artifactId>
+    <version>3232</version>
+    <!-- Add other dependency details if needed -->
+</dependency>
+>
 <dependency>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot</artifactId>
